# walle

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  Doxyfile  LICENSE  ProjectOptions.cmake  README.md  gcovr.cfg  run-lang-format  vcpkg.json
.github/: constants.env
.github/workflows/: ci.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
cortex/: CMakeLists.txt
cortex/include/cortex/: cortex.hpp
cortex/src/: cortex.cpp
cortex/tests/: CMakeLists.txt  test_cortex.cpp
fuzz_test/: CMakeLists.txt
include/cortex/: coroutine.hpp
include/walle/: sample_library.hpp  walle.hpp
include/walle/core/: coroutine_handle.hpp  coroutine_stack_allocator.hpp  error.hpp  event_loop.hpp  executor.hpp  fast_pimpl.hpp  malloc_free_memory_resource.hpp  mpmc_unbounded_blocking_queue.hpp  unbounded_blocking_queue.hpp
include/walle/core/coroutine/: handle.hpp  stack_allocator.hpp
include/walle/core/utils/: current_executor.hpp
include/walle/coro/: coroutine.hpp
include/walle/std/: resumable.hpp
include/walle/sync/: semaphore.hpp  tagged_semaphore.hpp  wait_group.hpp
libs/: CMakeLists.txt
libs/asymtx/: CMakeLists.txt
libs/asymtx/include/walle/asymtx/: all.hpp  async_scope.hpp  async_spawn.hpp  basic_matrix.hpp  compute_event_awaitable.hpp  go.hpp  mutex.hpp  oneway_task.hpp  scheduler.hpp  spawn.hpp  sync_spawn.hpp  sync_task.hpp  sync_wait.hpp  task.hpp  task_traits.hpp
libs/asymtx/src/: all.cpp  compute_event_awaitable.cpp  mutex.cpp  sync_spawn.cpp
libs/asymtx/tests/: CMakeLists.txt  test_async_scope.cpp  test_async_spawn.cpp  test_compute_task.cpp  test_go.cpp  test_sync_spawn.cpp  test_sync_task.cpp  test_task.cpp  test_task_tmp.cpp
libs/async/: CMakeLists.txt
libs/async/include/walle/async/: fiber_task.hpp  go.hpp  session.hpp  task_function.hpp  task_handle.hpp  task_id.hpp  task_status.hpp  this_task.hpp  yield.hpp
libs/async/include/walle/async/error/: error.hpp
libs/async/src/: blocking_parking_lot.cpp  blocking_parking_lot.hpp  fiber.cpp  fiber.hpp  fiber_context.hpp  go.cpp  session.cpp  task_context.cpp  task_context.hpp  task_handle.cpp  this_task.cpp  yield.cpp
libs/async/src/detail/: fiber.cpp  fiber.hpp
libs/async/tests/: CMakeLists.txt  test_blocking_parking_lot.cpp  test_fiber.cpp  test_task.cpp
libs/core/: CMakeLists.txt
libs/core/include/walle/core/: atomic_single_shot_event.hpp  defer.hpp  fast_pimpl.hpp  mpmc_unbounded_blocking_queue.hpp  non_copyable.hpp  non_movable.hpp  optional.hpp  overloaded.hpp  semaphore.hpp  single_shot_event.hpp  tagged_semaphore.hpp  wait_group.hpp
libs/core/src/: semaphore.cpp  wait_group.cpp
libs/core/tests/: CMakeLists.txt  test_core_fast_pimpl.cpp  test_core_semaphore.cpp  test_core_tagged_semaphore.cpp  test_core_unbounded_blocking_queue.cpp  test_core_wait_group.cpp  test_single_shot_event.cpp  test_single_shot_event_atomics.cpp
libs/cortex/: CMakeLists.txt
libs/cortex/include/cortex/: all.hpp  coroutine.hpp
libs/cortex/include/walle/cortex/: coroutine.hpp  coroutine_base.hpp  error.hpp  generator.hpp  stack_allocator.hpp  stack_context.hpp  suspend_context.hpp
libs/cortex/src/: all.cpp  coroutine.cpp  coroutine_base.cpp
libs/cortex/tests/: CMakeLists.txt  test_all.cpp  test_coroutine.cpp  test_coroutine_base.cpp  test_generator.cpp
libs/exec/: CMakeLists.txt
libs/exec/include/walle/exec/: current_executor.hpp  event_loop.hpp  executor.hpp  manual_executor.hpp  thread_pool.hpp
libs/exec/src/: current_executor.cpp  event_loop.cpp  manual_executor.cpp  thread_pool.cpp
libs/exec/tests/: CMakeLists.txt  test_exec_event_loop.cpp  test_exec_manual_executor.cpp  test_exec_thread_pool.cpp
libs/walle/include/walle/core/: event_loop.hpp  thread_pool.hpp  ucontext_coroutine_handle.hpp
libs/walle/include/walle/core/utils/: optional.hpp
libs/walle/include/walle/sync/: semaphore.hpp
libs/walle/src/walle/: CMakeLists.txt
libs/walle/src/walle/core/: coroutine_handle.cpp  event_loop.cpp  thread_pool.cpp
libs/walle/src/walle/sync/: wait_group.cpp
libs/walle/tests/: test_sync_tagged_semaphore.cpp
src/: CMakeLists.txt
src/cortex/: CMakeLists.txt  coroutine.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/walle/: CMakeLists.txt  walle.cpp
src/walle/core/: coroutine_handle.cpp  coroutine_stack_allocator.cpp  event_loop.cpp  malloc_free_memory_resource.cpp
src/walle/core/coroutine/: handle.cpp  stack_allocator.cpp
src/walle/core/utils/: current_executor.cpp
src/walle/coro/: coroutine.cpp
src/walle/sync/: semaphore.cpp  wait_group.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  test_core_coroutine_handle.cpp  test_core_fast_pimpl.cpp  test_coro_coroutine.cpp  test_cortex_coroutine.cpp  test_event_loop.cpp  test_std_resumable.cpp  test_sync_semaphore.cpp  test_sync_tagged_semaphore.cpp  test_sync_wait_group.cpp  test_thread_pool.cpp  test_unbounded_blocking_queue.cpp  tests.cpp
test/common/: sample_pimpl.cpp  sample_pimpl.hpp
walle/include/walle/core/: executor.hpp  manual_executor.hpp  mpmc_unbounded_blocking_queue.hpp
walle/include/walle/core/utils/: current_executor.hpp  overloaded.hpp
walle/src/walle/core/: manual_executor.cpp
walle/src/walle/sync/: semaphore.cpp
walle/test/: test_event_loop.cpp  test_manual_executor.cpp  test_std_resumable.cpp  test_unbounded_blocking_queue.cpp
